--- a/front-web/package.json
+++ b/front-web/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.5.3",
     "node-sass": "^4.12.0",
     "react": "^17.0.1",
+    "react-content-loader": "^5.1.4",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
