--- a/front-web/package.json
+++ b/front-web/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^12.0.0",
     "@types/qs": "^6.9.5",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^4.12.0",
     "qs": "^6.9.6",
     "react": "^17.0.1",
