--- a/front-web/package.json
+++ b/front-web/package.json
@@ -12,6 +12,7 @@
     "@types/qs": "^6.9.5",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-select": "^4.0.13",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "jwt-decode": "^3.1.2",
@@ -23,6 +24,7 @@
     "react-hook-form": "^6.15.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-select": "^4.1.0",
     "react-toastify": "^7.0.3",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
