--- a/front-web/package.json
+++ b/front-web/package.json
@@ -20,6 +20,7 @@
     "qs": "^6.9.6",
     "react": "^17.0.1",
     "react-content-loader": "^5.1.4",
+    "react-currency-input-field": "^3.2.5",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.1",
     "react-router-dom": "^5.2.0",
