--- a/front-web/package.json
+++ b/front-web/package.json
@@ -16,7 +16,7 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "jwt-decode": "^3.1.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "4.14.1",
     "qs": "^6.9.6",
     "react": "^17.0.1",
     "react-content-loader": "^5.1.4",
