--- a/dscatalog-mobile/package.json
+++ b/dscatalog-mobile/package.json
@@ -13,7 +13,7 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "axios": "^0.21.1",
-    "date-and-time": "^1.0.0",
+    "date-and-time": "0.14.2",
     "expo": "~40.0.0",
     "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.3",
