--- a/front-web/package.json
+++ b/front-web/package.json
@@ -6,15 +6,21 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/draftjs-to-html": "^0.8.0",
     "@types/jest": "^26.0.15",
     "@types/jwt-decode": "^3.1.0",
     "@types/node": "^12.0.0",
     "@types/qs": "^6.9.5",
     "@types/react-dom": "^16.9.8",
+    "@types/react-draft-wysiwyg": "^1.13.2",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-select": "^4.0.13",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "draft-js": "^0.11.7",
+    "draft-js-import-html": "^1.4.1",
+    "draftjs-to-html": "^0.9.1",
+    "immutable": "^4.0.0-rc.12",
     "jwt-decode": "^3.1.2",
     "node-sass": "4.14.1",
     "qs": "^6.9.6",
@@ -22,6 +28,7 @@
     "react-content-loader": "^5.1.4",
     "react-currency-input-field": "^3.2.5",
     "react-dom": "^17.0.1",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-hook-form": "^6.15.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
