--- a/front-web/package.json
+++ b/front-web/package.json
@@ -13,6 +13,7 @@
     "@types/qs": "^6.9.5",
     "@types/react-dom": "^16.9.8",
     "@types/react-draft-wysiwyg": "^1.13.2",
+    "@types/react-paginate": "^7.1.0",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-select": "^4.0.13",
     "axios": "^0.21.0",
@@ -30,6 +31,7 @@
     "react-dom": "^17.0.1",
     "react-draft-wysiwyg": "^1.14.7",
     "react-hook-form": "^6.15.1",
+    "react-paginate": "^7.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-select": "^4.1.0",
