--- a/dscatalog-mobile/package.json
+++ b/dscatalog-mobile/package.json
@@ -8,26 +8,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.3",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "axios": "^0.21.1",
+    "browserlist": "^1.0.1",
     "date-and-time": "0.14.2",
-    "expo": "~40.0.0",
-    "expo-image-picker": "~9.2.0",
-    "expo-status-bar": "~1.0.3",
+    "expo": "^42.0.0",
+    "expo-image-picker": "~10.2.2",
+    "expo-status-bar": "~1.0.4",
+    "node-fetch": "^2.6.1",
     "query-string": "^7.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-masked-text": "^1.13.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.2",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
     "react-native-tiny-toast": "^1.0.7",
     "react-native-web": "~0.13.12",
+    "ws": "^7.5.3",
     "xmldom": "^0.6.0"
   },
   "devDependencies": {
